--- a/src/app/components/home-cliente/home-cliente.component.scss
+++ b/src/app/components/home-cliente/home-cliente.component.scss
@@ -279,6 +279,11 @@ ion-card.service-card:active {
   align-items: center;
 }
 
+.verified-card {
+  border: 4px solid #FFCF00;
+  border-radius: 8px; /* Ajusta el radio según lo que necesites */
+}
+
 .header-content {
   display: flex;
   align-items: center;
