--- a/src/app/components/subasta/subasta.component.scss
+++ b/src/app/components/subasta/subasta.component.scss
@@ -73,7 +73,7 @@ ion-item {
 }
 
 .current-winner {
-  background-color: #d4edda; /* Verde más claro para el actual ganador */
+  background-color: #5CEB7D; /* Verde más claro para el actual ganador */
 }
 
 .current-winner-message {
