--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -60,14 +60,14 @@
         </ion-button>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <!-- <ion-row>
       <ion-col size="12">
         <ion-button expand="block" class="facebook-button" (click)="loginWithFacebook()">
           <img src="../../../assets/Facebook_f_logo_(2019).svg" class="icon"/>
           Continuar con Facebook
         </ion-button>
       </ion-col>
-    </ion-row>
+    </ion-row> -->
     <ion-row>
       <ion-col size="12" class="ion-text-center">
         <p>¿No tenés cuenta? <a (click)="goToRegister()">Creala ahora</a></p>
