login, persistencia de datos

--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -18,8 +18,8 @@
       <ion-input [(ngModel)]="email" type="email" required></ion-input>
     </ion-item>
     <ion-item>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input [(ngModel)]="password" type="password" required></ion-input>
+      <ion-label position="floating" placeholder="la contraseña debe tener 6 caracteres" >Contraseña</ion-label>
+      <ion-input [(ngModel)]="password" type="password" placeholder="la contraseña debe tener 6 caracteres"  required></ion-input>
     </ion-item>
     <ion-item>
       <ion-label>Tipo de Usuario</ion-label>
