--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -52,14 +52,14 @@
         <a (click)="goToPassword()">¿Olvidaste tu contraseña?</a>
       </ion-col>
     </ion-row>
-    <ion-row>
+    <!-- <ion-row>
       <ion-col size="12">
         <ion-button expand="block" class="google-button" (click)="loginWithGoogle()">
           <img src="../../../assets/google.svg" class="icon"/>
           Continuar con Google
         </ion-button>
       </ion-col>
-    </ion-row>
+    </ion-row> -->
     <!-- <ion-row>
       <ion-col size="12">
         <ion-button expand="block" class="facebook-button" (click)="loginWithFacebook()">
